@@ -2,9 +2,7 @@ gladedir   = $(datadir)/etherape/glade
 glade_DATA = 				\
 	etherape.glade			\
 	etherape.png			\
-	play.xpm			\
-	stop.xpm			\
-	pause.xpm
+	nodes.xpm
 
 EXTRA_DIST = \
 	$(glade_DATA)		
