@@ -1,0 +1,20 @@
+/* XPM */
+static char * nodes_xpm[] = {
+"13 15 2 1",
+" 	c None",
+".	c #000000",
+"  ..         ",
+" ....        ",
+"......       ",
+"......   ..  ",
+" ....   .... ",
+"  ..   ......",
+"       ......",
+"        .... ",
+"   ...   ..  ",
+"  .....      ",
+" .......     ",
+" .......     ",
+" .......     ",
+"  .....      ",
+"   ...       "};
